--- a/topo.html
+++ b/topo.html
@@ -3,27 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portal Do Esporte</title>
-
-<style>
-
-.topo{
-    width: 100%;
-    height: 50px;
-    text-align: center;
-    
-}
-
-
-</style>
-
+    <title>Document</title>
+    <style>
+        body{
+            background-color: gray;
+        }
+    </style>
 </head>
 <body>
     
-<frameset src="topo.html" ></frameset>
-<frameset src="lateralE.html"></frameset>
-<frameset src="lateralD.html"></frameset>
-<frameset src="centro.html"></frameset>
-
+   
 </body>
 </html>
