--- a/LateralD.html
+++ b/LateralD.html
@@ -6,7 +6,8 @@
     <title>Document</title>
     <style>
         body{
-            background-color: gray;
+            background-color: #ffd0a2;
+            opacity: 10%;
         }
     </style>
 </head>
