--- a/index.html
+++ b/index.html
@@ -4,15 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+<style>
+
+
+
+</style>
+    
 </head>
-<div ></div>
-<frameset rows="113,*" cols="*" framespacing="0" frameborder="yes" border="1">
+
+<frameset rows="113,*" cols="*" framespacing="0" frameborder="yes" border="0">
     <frame src="Topo.html" name="topFrame" scrolling="no" noresize="noresize" id="topFrame" title="topFrame" />
 
-<frameset rows = "*" cols="100,*,100" framespacing="0" frameborder="yes" border="1">
+<frameset rows = "*" cols="100,*,100" framespacing="0" frameborder="yes" border="0">
     <frame src="Lateral.E.html" name="leftFrame" scrolling="no" noresize="noresize" id="leftFrame" 
     title="leftFrame" />
-    <frame src="centro.html" name="rightFrame" scrolling="no" noresize="noresize" id="rightFrame" 
+    <frame src="centro.html" name="rightFrame" scrolling="yes" noresize="noresize" id="centerFrame" 
     title="rightFrame" />
     <frame src="Lateral.D.html" name="mainFrame" id="mainFrame" title="leftFrame" />
 </frameset>
