--- a/centro.html
+++ b/centro.html
@@ -5,16 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        body{
-            width: 100%;
-            height: 100%;
-            background-color: gray;
-        }
+       
+       #wallpaper{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("fundoinicial.png");
+    background-size: cover;
+    background-position: center;
+    opacity: 20%;
+    background-color: #f98b5d;
+}
+body{
+    opacity: 80%;
+    background-color: coral;
+    z-index: -1; 
+}
+
     </style>
 </head>
-<body background="fundoinicial.png">
+<body >
     
-
+<div id="wallpaper"></div>
 
 </body>
 </html>
