--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <frame src="Topo.html" name="topFrame" scrolling="no" noresize="noresize" id="topFrame" title="topFrame" />
 
 <frameset rows = "*" cols="100,*,100" framespacing="0" frameborder="yes" border="0">
-    <frame src="Lateral.E.html" name="leftFrame" scrolling="no" noresize="noresize" id="leftFrame" 
+    <frame src="LateralE.html" name="leftFrame" scrolling="no" noresize="noresize" id="leftFrame" 
     title="leftFrame" />
     <frame src="centro.html" name="rightFrame" scrolling="yes" noresize="noresize" id="centerFrame" 
     title="rightFrame" />
-    <frame src="Lateral.D.html" name="mainFrame" id="mainFrame" title="leftFrame" />
+    <frame src="LateralD.html" name="mainFrame" id="mainFrame" title="leftFrame" />
 </frameset>
 </frameset>
 <noframes>
