--- a/topo.html
+++ b/topo.html
@@ -7,30 +7,56 @@
     <title>Document</title>
     <style>
         body {
-            background-color: gray;
+            background-color: coral;
+            border-bottom: 5px solid black;
+            border-radius: 15%;
         }
 
         #wallpaper {
             position: relative;
-            
             left: 0;
-            width: 500px;
-            height: 100px;
+            width: 470px;
+            height: 80px;
             background-image: url("topo.calistenia.png");
-            background-size: auto  ;
-            background-position:center;
+            background-size: auto;
+            background-position: center;
             padding-left: 40px;
             padding-top: 20px;
-         
+            border-bottom: yellow dashed 1px;
+            border-radius: 18%;
+            margin-left: 28%;
+        }
+
+        #home {
+            width: 100px;
+            height: 100px;
+            object-position: left;
+        }
+
+        div {
+            display: flex;
+            justify-content: left;
+        }
+
+        div.meio {
+            display: flex;
+            justify-content: center;
         }
     </style>
 
 </head>
 
 <body>
-<center>
-    <div id="wallpaper"></div>
-</center>
+
+    <div>
+        <a href="centro.html" target="mainFrame"><img src="home.png" alt="" id="home"></a>
+        <div id="wallpaper"></div>
+        <!-- <a href="centro.html" target="mainFrame"><img src="home.png" alt="Início" id="home"></a> -->
+        <!-- <center>  <div id="wallpaper" class="meio">  </div>   </center> -->
+
+    </div>
+
+
 </body>
 
 </html>
