--- a/LateralD.html
+++ b/LateralD.html
@@ -14,7 +14,7 @@
         #nada {
             border: orange 3px solid;
             width: 95px;
-            margin-right: -11px;
+            margin-left: -107px;
             margin-top: -7px;
             height: 400px;
             background-color: #fa7748;
@@ -28,24 +28,27 @@
             height: 100px;
             background-color: #ff7f50;
             border: orange 3px solid;
-            font-size: 16px;
+            font-size: 13px;
             font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         }
 
         #but:hover {
-            transition: 0.3s;
+            transition: 0.28s;
             opacity: 0.8;
             background-color: orangered;
+            font-size: 16px;
+            color: antiquewhite;
         }
+
     </style>
 
 </head>
 
 <body>
 
-    <a href="historia.html" target="mainFrame"><button id="but"> História </button></a>
-    <a href="historia.html" target="mainFrame"><button id="but"> Principais Movimentos </button></a>
-    <a href="historia.html" target="mainFrame"><button id="but"> Benefícios </button></a>
+    <a href="planejamento.html" target="mainFrame"><button id="but"> Como Planejar <br> Um Treino </button></a>
+    <a href="exercicios.html" target="mainFrame"><button id="but"> Melhores Exercícios </button></a>
+    <a href="dicas.html" target="mainFrame"><button id="but"> Dicas Para Iniciantes </button></a>
     <div id="nada"></div>
 
 </body>
