--- a/centro.html
+++ b/centro.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-       
-       #wallpaper{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url("fundoinicial.png");
-    background-size: cover;
-    background-position: center;
-    opacity: 20%;
-    background-color: #f98b5d;
-}
-body{
-    opacity: 80%;
-    background-color: coral;
-    z-index: -1; 
-}
+        #wallpaper {
+            background-color: #f98b5d;
+            margin-left: 13%;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 70%;
+            height: 90%;
+            background-image: url("fundoinicial.png");
+            background-size: cover;
+            background-position: center;
+            opacity: 10%;
+            background-color: #f98b5d;
+        }
 
+        body {
+            opacity: 80%;
+            background-color: coral;
+            z-index: -1;
+        }
     </style>
 </head>
-<body >
-    
-<div id="wallpaper"></div>
+
+<body>
+
+    <div id="wallpaper">
+
+
+    </div>
 
 </body>
+
 </html>
