--- a/beneficios.html
+++ b/beneficios.html
@@ -8,54 +8,81 @@
     <style>
         body {
             background-color: coral;
-            border-bottom: 5px solid black;
-            border-radius: 15%;
+
         }
 
-        #wallpaper {
-            position: relative;
-            left: 0;
-            width: 470px;
-            height: 80px;
-            background-image: url("topo.calistenia.png");
-            background-size: auto;
-            background-position: center;
-            padding-left: 40px;
-            padding-top: 20px;
-            border-bottom: yellow dashed 1px;
-            border-radius: 18%;
-            margin-left: 28%;
+
+
+        .title {
+            font-size: 40px;
+            text-align: center;
+            font-weight: bolder;
         }
 
-        #home {
-            width: 100px;
-            height: 100px;
-            object-position: left;
+        .text {
+            font-size: 26px;
+            margin-left: 3%;
+            margin-right: 3%;
+            font-family: Georgia, 'Times New Roman', Times, serif;
         }
 
-        div {
-            display: flex;
-            justify-content: left;
+    
+        ::-webkit-scrollbar {
+            width: 4px;
         }
 
-        div.meio {
-            display: flex;
-            justify-content: center;
+        ::-webkit-scrollbar-thumb {
+
+            background-color: darkorange;
+            border-radius: 2px;
         }
+
+        ::-webkit-scrollbar-thumb:hover {
+            background-color: chocolate;
+        }
+
     </style>
 
 </head>
 
 <body>
 
-    <div>
-        <a href="centro.html" target="mainFrame"><img src="home.png" alt="" id="home"></a>
-        <div id="wallpaper"></div>
-        <!-- <a href="centro.html" target="mainFrame"><img src="home.png" alt="Início" id="home"></a> -->
-        <!-- <center>  <div id="wallpaper" class="meio">  </div>   </center> -->
+    <p class="title"> Benefícios</p>
+    <p class="text">Assim como qualquer outra modalidade esportiva a prática da calistenia pode nos promover diversos
+        benefícios
+        tanto estéticos quanto benefícios voltados a nossa saúde. <br>
 
-    </div>
+        Essa prática é totalmente gratuita não é necessário gastar com mensalidades de academia já que pode ser
+        praticada ao ar livre, na sua própria casa, e em praças públicas. <br> Por ser praticada em qualquer ambiente não é
+        necessário gastar com equipamentos caros já que em uma
+        simples praça você encontra equipamentos como barras ou paralelas. <br><br>
 
+        Com a calistenia é possível obter força suficiente para erguer o peso do corpo na Hand stand com apenas dois
+        dedos ou como preferir chamar a famosa parada de mão. Outros benefícios são também a melhora na resistência,
+        mobilidade e ganho de massa muscular, ela também contribui para o aumento da flexibilidade e do equilíbrio
+        corporal. <br><br>
+
+        Com a calistenia o corpo todo é trabalhado, pois é eficaz para alcançar o corpo inteiro, uma vez que existe uma
+        variedade imensa de exercícios que trabalham todos os grupos musculares dentro de um único exercício. <br><br>
+
+
+
+    <ul class="text">
+        Os benefícios principais são:
+        <li class="text"> É adequada para qualquer nível de condicionamento físico. </li>
+
+        <li class="text"> Contribui para o desenvolvimento e evolução da coordenação motora.</li>
+
+        <li class="text"> Reduz o percentual de gordura corporal. </li>
+
+        <li class="text"> Contribui para o aumento do gasto energético. </li>
+
+        <li class="text"> Contribui para um metabolismo mais ativo. </li>
+
+        <li class="text"> Reduz a frequência cardíaca em repouso.</li>
+    </ul>
+
+    </p>
 
 </body>
 
