--- a/historia.html
+++ b/historia.html
@@ -12,26 +12,12 @@
         }
 
  
-        #home {
-            width: 100px;
-            height: 100px;
-            object-position: left;
-        }
-
-        div {
-            display: flex;
-            justify-content: left;
-        }
-
-        div.meio {
-            display: flex;
-            justify-content: center;
-        }
+      
 
         .title {
             font-size: 40px;
             text-align: center;
-            font: bolder;
+            font-weight: bolder;
         }
 
         .text {
