--- a/movimentos.html
+++ b/movimentos.html
@@ -13,26 +13,10 @@
 
        
 
-        #home {
-            width: 100px;
-            height: 100px;
-            object-position: left;
-        }
-
-        div {
-            display: flex;
-            justify-content: left;
-        }
-
-        div.meio {
-            display: flex;
-            justify-content: center;
-        }
-
         .title {
             font-size: 40px;
             text-align: center;
-            font: bolder;
+            font-weight: bolder;
         }
 
         .text {
@@ -44,9 +28,24 @@
 
         img{
             margin-top: 2%;
-            width: 300px;
+            width: 400px;
             height: 300px;
         }
+
+        ::-webkit-scrollbar {
+            width: 4px;
+        }
+
+        ::-webkit-scrollbar-thumb {
+
+            background-color: darkorange;
+            border-radius: 2px;
+        }
+
+        ::-webkit-scrollbar-thumb:hover {
+            background-color: chocolate;
+        }
+
     </style>
 
 </head>
