--- a/centro.html
+++ b/centro.html
@@ -7,7 +7,6 @@
     <title>Document</title>
     <style>
         #wallpaper {
-            background-color: #f98b5d;
             margin-left: 13%;
             position: fixed;
             top: 0;
@@ -18,13 +17,14 @@
             background-size: cover;
             background-position: center;
             opacity: 10%;
-            background-color: #f98b5d;
+            background-color:coral;
         }
 
         body {
             opacity: 80%;
             background-color: coral;
             z-index: -1;
+            opacity: 500%;
         }
     </style>
 </head>
