--- a/topo.html
+++ b/topo.html
@@ -8,8 +8,8 @@
     <style>
         body {
             background-color: coral;
-            border-bottom: 5px solid black;
-            border-radius: 15%;
+            border-radius: 5%;
+            border-bottom: 7px solid orange;
         }
 
         #wallpaper {
@@ -23,7 +23,7 @@
             padding-left: 40px;
             padding-top: 20px;
             border-bottom: yellow dashed 2px;
-            border-radius: 16%;
+            border-radius: 6%;
             margin-left: 28%;
         }
 
@@ -32,7 +32,17 @@
             height: 100px;
             object-position: left;
         }
-
+        
+        #home:hover {
+            width: 100px;
+            height: 100px;
+            object-position: left;
+            background-color: rgb(255, 114, 63);
+            transition: 0.45s;
+            border-radius: 28%;
+            border-bottom: 2px solid rgb(255, 208, 150);
+            border-top: 2px solid rgb(255, 208, 150);
+        }
         div {
             display: flex;
             justify-content: left;
