--- a/principios.html
+++ b/principios.html
@@ -17,6 +17,8 @@
             font-size: 40px;
             text-align: center;
             font-weight: bolder;
+      
+
         }
 
         .text {
@@ -24,6 +26,22 @@
             margin-left: 3%;
             margin-right: 3%;
             font-family: Georgia, 'Times New Roman', Times, serif;
+            letter-spacing: 3px;
+      
+
+        }
+        ::-webkit-scrollbar {
+            width: 4px;
+        }
+
+        ::-webkit-scrollbar-thumb {
+
+            background-color: darkorange;
+            border-radius: 2px;
+        }
+
+        ::-webkit-scrollbar-thumb:hover {
+            background-color: chocolate;
         }
     </style>
 
