--- a/topo.html
+++ b/topo.html
@@ -10,6 +10,7 @@
             background-color: coral;
             border-radius: 5%;
             border-bottom: 7px solid orange;
+            
         }
 
         #wallpaper {
@@ -28,18 +29,18 @@
         }
 
         #home {
-            width: 100px;
-            height: 100px;
+            width: 95px;
+            height: 95px;
             object-position: left;
         }
         
         #home:hover {
-            width: 100px;
-            height: 100px;
+            width: 96px;
+            height: 96px;
             object-position: left;
             background-color: rgb(255, 114, 63);
-            transition: 0.45s;
-            border-radius: 28%;
+            transition: 0.30s;
+            border-radius: 35%;
             border-bottom: 2px solid rgb(255, 208, 150);
             border-top: 2px solid rgb(255, 208, 150);
         }
@@ -59,7 +60,7 @@
 <body>
 
     <div>
-        <a href="centro.html" target="mainFrame"><img src="home.png" alt="" id="home"></a>
+        <div><a href="centro.html" target="mainFrame"><img src="home.png" alt="" id="home"></a></div>
         <div id="wallpaper"></div>
         <!-- <a href="centro.html" target="mainFrame"><img src="home.png" alt="Início" id="home"></a> -->
         <!-- <center>  <div id="wallpaper" class="meio">  </div>   </center> -->
