--- a/beneficios.html
+++ b/beneficios.html
@@ -28,7 +28,7 @@
             font-family: Georgia, 'Times New Roman', Times, serif;
             letter-spacing: 3px;
             padding: 1%;
-      
+            text-align: justify
         }
 
     
