--- a/principios.html
+++ b/principios.html
@@ -27,6 +27,7 @@
             margin-right: 3%;
             font-family: Georgia, 'Times New Roman', Times, serif;
             letter-spacing: 3px;
+            text-align: justify
       
 
         }
