--- a/centro.html
+++ b/centro.html
@@ -26,14 +26,22 @@
             z-index: -1;
             opacity: 500%;
         }
+
+        #text{
+            font-size: 28px;
+            text-align: justify;
+            margin: 8% 20% 0% 20%;
+            font-weight: 600;
+        }
     </style>
 </head>
 
 <body>
-
-    <div id="wallpaper">
-
-
+    <p id="text"> Seja bem-vindo ao site do Portal Calisthenics. Aqui você vai conhecer um pouco desse esporte e como os
+        atletas aprende e fazem os movimentos. <br> <br> 
+        Este esporte está relacionado a equilibrio, força, condicionamento fisico e saúde
+       </p>
+<div id="wallpaper">
     </div>
 
 </body>
